--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,8 +47,8 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
-      - name: Run Black formatter check
-        run: black --check workspace/
+      - name: Run Ruff formatter check
+        run: ruff format --check workspace/
 
       - name: Run isort import checker
         run: isort --check-only workspace/
