fix: Pin Black version to 25.1.0 for consistency
- Changed black>=24.8.0 to black==25.1.0 in both requirements files
- Ensures CI uses same Black version as local development (25.1.0)
- Fixes formatting discrepancy between Black 24.8.0 (CI) and 25.1.0 (local)
- Aligns with .pre-commit-config.yaml Black version (rev: 25.1.0)

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -31,7 +31,7 @@ pytest-factoryboy>=2.7.0    # Factory Boy pytest integration
 hypothesis>=6.119.0         # Property-based testing
 
 # Code Quality (for CI/CD checks)
-black>=24.8.0
+black==25.1.0
 isort>=5.13.0
 flake8>=7.1.0
 flake8-docstrings>=1.7.0
