--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ faker>=33.1.0               # Test data generation
 freezegun>=1.5.0            # Time mocking for tests
 
 # Code Quality & Linting
-black>=24.8.0
+black==25.1.0
 isort>=5.13.0
 flake8>=7.1.0
 flake8-docstrings>=1.7.0
