fix: Use pyproject.toml for mypy config instead of mypy.ini
The CI/CD workflow was looking for mypy.ini which doesn't exist.
Removed --config-file flag to let mypy automatically use pyproject.toml,
which is the actual configuration file for mypy in this project.

This fixes the "Cannot find config file 'mypy.ini'" error in CI.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
         run: flake8 workspace/ --config=.flake8
 
       - name: Run mypy type checker
-        run: mypy workspace/ --config-file=mypy.ini
+        run: mypy workspace/
 
       - name: Run bandit security linter
         run: bandit -r workspace/ -f json -o bandit-report.json
