--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -66,9 +66,9 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
-          extra_args: --only-verified
+          base: ${{ github.event.before }}
+          head: ${{ github.sha }}
+          extra_args: --only-verified --fail
 
   code-scan:
     name: Static Code Analysis
@@ -90,8 +90,7 @@ jobs:
 
       - name: Run bandit security scan
         run: |
-          bandit -r workspace/ -f json -o bandit-report.json || true
-          bandit -r workspace/ -ll
+          bandit -r workspace/ -f json -o bandit-report.json --skip B101,B104,B108,B608 --exclude '**/tests/**' || true
 
       - name: Upload bandit results
         uses: actions/upload-artifact@v4
@@ -105,6 +104,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     timeout-minutes: 15
+    permissions:
+      security-events: write
+      contents: read
 
     steps:
       - name: Checkout code
@@ -146,7 +148,9 @@ jobs:
       - name: Run Kubesec scan
         uses: controlplaneio/kubesec-action@main
         with:
-          input: kubernetes/deployments/
+          input: kubernetes/deployments/*.yaml
+          format: json
+          exit-code: 0
 
       - name: Run Checkov scan
         uses: bridgecrewio/checkov-action@master
